# Genesys

./: GUARD RAIL4.txt  GUARD RAILS.txt  LICENSE.txt  MANIFEST.in  NOTICE.txt  README.md  bringup.launch.py  fixes.txt  guard rail2.txt  guard rail3.txt  guardrail.json  guardrail.txt  guardrail5 .txt  nav2_params.yaml  navigation2.txt  new guardrail.txt  org.txt  pyproject.toml  setup.py  simulation.launch.py  verify_generator.py
.github/workflows/: ci.yml
_verification_phase2/: navigation.yaml
docs/: cli_build.md  cli_doctor.md  cli_launch.md  cli_make.md  cli_nav2.md  cli_new.md  cli_pipeline.md  cli_ros.md  cli_run.md  cli_sim.md  components.md  cpp_development.md  decorators.md  pipeline.md
examples/vision_pipeline/: pipeline.yaml  vision_pipeline.launch.py
framework_cli/: main.py
framework_core/: decorators.py
genesys/: decorators.py  genesys.cmake  helpers.py  macros.hpp  node_base.py
genesys.egg-info/: PKG-INFO  SOURCES.txt
genesys/cmake/: genesysConfig.cmake
genesys/genesys/: CMakeLists.txt  package.xml
genesys/genesys/include/genesys/: macros.hpp
genesys/include/genesys/: macros.hpp
genesys/pipeline/: generator.py  parser.py  schema.yaml
genesys_cli/: main.py  scaffolding.py  utils.py
genesys_cli/commands/: build.py  doctor.py  launch.py  make.py  nav2.py  new.py  pipeline.py  ros.py  rqt.py  run.py  sim.py  templates.py
genesys_cli/config/: navigation_config.py
genesys_cli/generators/: navigation.py
genesys_cli/genesys_macros/: CMakeLists.txt  package.xml
genesys_framework_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
genesys_genesys_framework_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/integration/: test_launch_mixed.py  test_pipeline_run.py
tests/unit/: test_codegen.py  test_decorators.py
(+63 files in other folders)
